discussion/kv_engine/177005/177005_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

[serverless] Update test for UnmeteredPrivilege

All connections are metered unless they have the unmetered privilege
in its effective privilege set. Connect as the almighty "@admin" user
and verify that the connection is unmetered by default, but once the
privilege gets dropped it is metered.

Change-Id: I40cf3ef9d69e3fe88b1c1aab43dc1b8e27060237

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 12:22:56.000000000
Message: 
Uploaded patch set 4: Patch Set 3 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 12:30:22.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47309/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47309/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39761/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39761/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8220/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8220/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8319/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8319/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20433/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20433/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20781/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20781/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21421/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21421/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28814/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28814/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19655/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19655/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18549/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13: error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
            ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18549/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:25:13:
error: no template named "unique_ptr" in namespace "std" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18549/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17700/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
